# rbx_types_ops

./: .gitignore  Cargo.toml  README.md
src/: floor_ceil_round.rs  floor_ceil_round_abs.rs  lerp.rs  lib.rs
src/math_ops/: cframe.rs  color3.rs  color3u8.rs  color3uint8.rs  float32.rs  mod.rs  rect.rs  udim.rs  udim2.rs  vec2.rs  vec2i16.rs  vec2int16.rs  vec3.rs  vec3i16.rs  vec3int16.rs
src/snapshots/: rbx_types_ops__floor_ceil_round_abs__cframe_abs.snap  rbx_types_ops__floor_ceil_round_abs__cframe_ceil.snap  rbx_types_ops__floor_ceil_round_abs__cframe_floor.snap  rbx_types_ops__floor_ceil_round_abs__cframe_round.snap  rbx_types_ops__floor_ceil_round_abs__color3_abs.snap  rbx_types_ops__floor_ceil_round_abs__color3_ceil.snap  rbx_types_ops__floor_ceil_round_abs__color3_floor.snap  rbx_types_ops__floor_ceil_round_abs__color3_round.snap  rbx_types_ops__floor_ceil_round_abs__color3uint8_abs.snap  rbx_types_ops__floor_ceil_round_abs__color3uint8_ceil.snap  rbx_types_ops__floor_ceil_round_abs__color3uint8_floor.snap  rbx_types_ops__floor_ceil_round_abs__color3uint8_round.snap  rbx_types_ops__floor_ceil_round_abs__f32_abs.snap  rbx_types_ops__floor_ceil_round_abs__f32_ceil.snap  rbx_types_ops__floor_ceil_round_abs__f32_floor.snap  rbx_types_ops__floor_ceil_round_abs__f32_round.snap  rbx_types_ops__floor_ceil_round_abs__matrix3_abs.snap  rbx_types_ops__floor_ceil_round_abs__matrix3_ceil.snap  rbx_types_ops__floor_ceil_round_abs__matrix3_floor.snap  rbx_types_ops__floor_ceil_round_abs__matrix3_round.snap  rbx_types_ops__floor_ceil_round_abs__rect_abs.snap  (+39 more)
(+266 files in other folders)
